kubernetes/standard/ingress/traefik-ingress-api.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api-server-route
  namespace: featbit
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`featbit-api.local`)
    services:
    - name: api-server
      namespace: featbit
      port: 5000
    middlewares: []
