kubernetes/standard/ingress/traefik-ingress-evaluation-server.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: evaluation-server-route
  namespace: featbit
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`featbit-eval.local`)
    services:
    - name: evaluation-server
      namespace: featbit
      port: 5100
    middlewares: []
